# caveman-agent

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
caveman/: __init__.py  __main__.py  audit.py  errors.py  events.py  events_store.py  lifecycle.py  paths.py  result.py  utils.py
caveman/acp/: __init__.py  client.py  server.py
caveman/agent/: __init__.py  auxiliary.py  bg_tasks.py  checkpoint.py  context.py  context_refs.py  display.py  factory.py  loop.py  metrics.py  phased_coordinator.py  phases.py  prompt.py  response_style.py  session_hooks.py  session_store.py  stream.py  title_generator.py  tools_exec.py  workspace.py
caveman/bridge/: __init__.py  acp.py  cli_agents.py  cli_transport.py  hermes_bridge.py  openclaw_bridge.py  uds_transport.py  ws_transport.py
caveman/cli/: __init__.py  acp_cli.py  audit.py  bench.py  changelog.py  doctor.py  flywheel.py  importer.py  main.py  selftest.py  stats.py  status.py  tui.py  wiki_mcp.py
caveman/commands/: __init__.py  completer.py  dispatcher.py  formatter.py  gateway_adapter.py  registry.py  types.py
caveman/compression/: __init__.py  context_engine.py  micro.py  normal.py  pipeline.py  safeguard.py  smart.py  utils.py
caveman/config/: __init__.py  default.yaml  loader.py  validator.py
docs/: ADR.md  ARCHITECTURE.md  IMPORT_SPEC.md  MCP.md  PRD.md  SELF_ASSESSMENT_R100.md  SLASH_COMMANDS_SPEC.md
scripts/: auto-changelog.py  dogfood.py  migrate_json_to_sqlite.py  test_real_api.py
tests/: conftest.py  test_20_perspectives.py  test_50_dimensions.py  test_acp.py  test_audit.py  test_bridge_memory.py  test_cli_status.py  test_commands.py  test_compound_interest.py  test_compression.py  test_compression_upgrade.py  test_coverage_gaps.py  test_cross_lang_recall.py  test_deep_audit.py  test_drift.py  test_e2e_dryrun.py  test_events.py  test_flywheel_v2.py  test_gateway_integration.py  test_gemini_provider.py  test_hybrid_retrieval.py  test_import_system.py  test_integration.py  test_integration_agent.py  test_integration_checkpoint.py  test_integration_flywheel.py  test_integration_memory.py  test_integration_tools.py  test_loop.py  test_mcp_client.py  test_memory.py  test_memory_provider.py  test_new_tools.py  test_nfr_compliance.py  test_nudge_drift_doctor.py  test_ollama_provider_v2.py  test_p1_p3_bridge_replay.py  test_p1_platform.py  test_phase3.py  test_phase4_5.py  (+55 more)
(+145 files in other folders)
