[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caveman-agent"
version = "0.3.0"
description = "An AI agent OS with a 6-engine memory flywheel — knowledge that compounds, not decays."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["ai", "agent", "llm", "tools", "memory", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pyyaml>=6",
    "pydantic>=2.7",
    "aiofiles>=23",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.30"]
gemini = ["google-generativeai>=0.7"]
groq = ["groq>=0.9"]
mistral = ["mistralai>=1.0"]
together = ["together>=1.2"]
ollama = ["ollama>=0.3"]
mcp = ["mcp>=1.20"]
discord = ["discord.py>=2.3"]
telegram = ["python-telegram-bot>=21"]
embedding = ["fastembed>=0.8", "jieba>=0.42"]
browser = ["playwright>=1.44"]
crypto = ["cryptography>=42"]
providers = [
    "anthropic>=0.25",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "groq>=0.9",
    "mistralai>=1.0",
    "together>=1.2",
    "ollama>=0.3",
]
gateway = [
    "discord.py>=2.3",
    "python-telegram-bot>=21",
]
all = [
    "anthropic>=0.25",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "groq>=0.9",
    "mistralai>=1.0",
    "together>=1.2",
    "ollama>=0.3",
    "mcp>=1.20",
    "discord.py>=2.3",
    "python-telegram-bot>=21",
    "fastembed>=0.8",
    "jieba>=0.42",
    "playwright>=1.44",
    "cryptography>=42",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
    "mypy>=1.10",
]

[project.scripts]
caveman = "caveman.cli.main:app"

[project.urls]
Homepage = "https://github.com/abczsl520/caveman-agent"
Documentation = "https://github.com/abczsl520/caveman-agent/docs"
Repository = "https://github.com/abczsl520/caveman-agent"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "docs*", "hermes-src*", "openclaw-src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
